# asio_utils

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FindASIO.cmake  git_submodules.cmake
include/asio_ct/: connection_tools.hpp
include/asio_utils/: connection_adapter.hpp  connection_tools.hpp  traits.h  utility.h
include/asio_utils/asio_implementation/: connection_asio_impl.h
include/asio_utils/generic/: connection_adapter.h  generic_impl.h
include/asio_utils/testing/: stub_connection.h  test_utils.h
sandbox/: CMakeLists.txt  example_6.cpp  find_deadlock.cpp  sandbox.cpp
test/: CMakeLists.txt  test_composed_send.cpp  test_connection_adapter.cpp  test_make_connection_attempt.cpp  test_utils.h
