# does not compile with asio 1.12

#add_executable(sandbox sandbox/sandbox.cpp)
#target_link_libraries(sandbox PRIVATE eld::asio_utils)

#add_executable(sb.find_deadlock sandbox/find_deadlock.cpp)
#target_link_libraries(sb.find_deadlock PRIVATE eld::asio_utils)

#add_executable(example_6 sandbox/example_6.cpp)
#target_link_libraries(example_6 PRIVATE eld::asio_utils)
